fixed faculty cards in homepage and overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 /* android css */
 @media screen and (max-width:580px) {
     *{
-        overflow: hidden;
+        overflow-x: hidden;
     }
     /* navigation button */
     #headernav{
