--- a/src/pages/home/homestyles.css
+++ b/src/pages/home/homestyles.css
@@ -43,6 +43,7 @@
     margin-top: 2dvh;
     margin-bottom: 2dvh;
     background: whitesmoke;
+    width: 100dvw;
 }
 #faculties img{
     height: 30dvw;
